--- a/DesktopVersionHTML&CSS/styles.css
+++ b/DesktopVersionHTML&CSS/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Nunito';
-    src: url(C:/Users/Aura/Desktop/Internship/DesktopVersionHTML&CSS/Nunito-Regular.ttf);
+    src: url(Nunito-Regular.ttf);
 }
 
 body{
