--- a/PhoneVersion/style.css
+++ b/PhoneVersion/style.css
@@ -6,37 +6,39 @@
         color:#FFFFFF;
         height: 800px; /* here come back */
     }
-    h1 {
+
+    h1{
         font-size: 30px;
         margin: 0;
     }
+
     h2{
         font-size: 20px;
+        margin-top: 14px;
+        margin-bottom: 14px;   
     }
-    p {
+
+    p{
         font-size: 16px;
         color: #B9B2C4;
         margin:0
     }
-
-
-
-    header {
+    header{
         display: grid;
         align-items: center;
         grid-template-columns: repeat(3, 1fr);
     }
+
     #icon{
        justify-self: end;  
     }
-
-
 
     section{
         position: relative;
         padding-top:15px ;
     }
-    section.card div{
+
+    section#card div{
         border: 1px solid rgb(85, 31, 83);
         border-radius: 40px;
         position: relative;
@@ -47,32 +49,36 @@
         background-image:  linear-gradient(40deg , rgb(120, 28, 255) -20%, transparent 40%), linear-gradient(320deg , rgb(212, 30, 127) 0%, transparent 60%);;
         z-index: -1;
     }
-    section.card div h1{
+
+    section#card div h1{
         position: absolute;
         left: 30px;
         top: 40px;
     }
-    section.card div p{
+
+    section#card div p{
         position: absolute;
         left: 30px;
         bottom: 52px;
         color: white;
     }
-    section.card div p.date{
+    section#card div p.date{
         position: absolute;
         font-size: 12px;
         left: 30px;
         bottom: 30px;
         color: rgba(255, 255, 255, 0.7);
     }
-    section.card div img.vector{
+
+    section#card div img.vector{
         position: absolute;
         top: 80px;
         right: 37px;
         width: 23px;
         height: 40px;
     }
-    section.card div img.mastercard{
+
+    section#card div img.mastercard{
         position: absolute;
         bottom: 26px;
         right: 34px;
@@ -80,10 +86,8 @@
         height: 40px;
     }
 
-
-
-    aside{
-        padding-top: 10px;
+    article{
+        padding-top: 15px;
         display: grid; 
         justify-items: center; 
         align-items: center; 
@@ -91,10 +95,12 @@
         grid-template-columns: repeat(4, 1fr);
         grid-row-gap: 5px;
     }
-    aside p{
+
+    article p{
         color: white;
     }
-    aside article{
+
+    article a{
         height: 70px;
         width: 70px;
         display: flex;
@@ -103,82 +109,85 @@
         border-radius: 25px;
         
     }
-    aside article:first-child{
+
+    article a:first-child{
         border: 1.5px solid #36504a;
         background-image: radial-gradient(at 0% 90%, rgb(0, 178, 255) -40%, transparent 60%), radial-gradient(at 98% 48%, rgb(0, 255, 194) -60%, transparent 80%), radial-gradient(at 98% 96%, rgb(0, 255, 194) -20%, transparent 60%);  
     }
-    aside article:nth-child(2){
+
+    article a:nth-child(2){
         border: 1.5px solid #36504a;
         background-image: radial-gradient(at 0% 90%, rgb(0, 255, 170) -40%, transparent 60%), radial-gradient(at 98% 48%, rgb(149, 255, 15) -60%, transparent 80%), radial-gradient(at 98% 96%, rgb(149, 255, 15) -20%, transparent 60%);  
     }
-    aside article:nth-child(3){
+
+    article a:nth-child(3){
         border: 1.5px solid #36504a;
         background-image: radial-gradient(at 0% 90%, rgb(112, 255, 0) -40%, transparent 60%), radial-gradient(at 98% 48%, rgb(255, 245, 0) -60%, transparent 80%), radial-gradient(at 98% 96%, rgb(255, 245, 0) -20%, transparent 60%);  
     }
-    aside article:nth-child(4){
+
+    article a:nth-child(4){
         border: 1.5px solid #36504a;
         background-image: radial-gradient(at 0% 90%, rgb(255, 214, 0) -40%, transparent 60%), radial-gradient(at 98% 48%, rgb(255, 138, 0) -60%, transparent 80%), radial-gradient(at 98% 96%, rgb(255, 138, 0) -20%, transparent 60%);  
     }
 
-
-
-
-
     table{
         width: 100%;
-        padding-top: 15px;  
+        padding-top: 20px;  
     }
+
     table img{
         width: 48px;
         height: 48px;
     }
+
     .items-left{
         width: 56px;
     }
+
     .items-center{
         text-align: left;
     }
+
     .items-right{
         text-align: right;
     }
+
     .line-one{
         font-size: 18px;
         color: white;
     }
+
     table tbody td{
         padding: 1px;
     }
-   
-    
-
-
 
     nav{
         position: fixed;
-    
         width: 87%; 
         height: 60px;
         bottom: 20px;
         display: flex;
-        justify-content: center;
         align-items: center;
-        
+        justify-content: space-evenly;     
         background: linear-gradient(180deg, #20204D 0%, #1D1D55 100%);
         border: 1px solid #383467;
         border-radius: 40px;
     }
+
     .nav-link{
         width: 20%;
         text-align: center;
     }
+
     .nav-link:first-child {
         margin-left: 15px; 
       }
+
     .nav-link:last-child {
         margin-right: 15px; 
     }
-    .nav-link:nth-child(3){
-        
+
+    .nav-link:nth-child(3){  
         background-image: radial-gradient(at 96% 2%, rgb(250, 0, 255) -40%, transparent 90%), radial-gradient(at 1% 2%, rgb(0, 255, 56) -20%, transparent 90%), radial-gradient(at 1% 94%, rgb(66, 0, 255) -40%, transparent 90%), radial-gradient(at 96% 95%, rgb(0, 240, 255) -20%, transparent 90%);
         border: 1.5px solid rgb(132, 154, 149);
         height: 58px;
@@ -187,18 +196,4 @@
         align-items: center;
         justify-content: center;
     }
-
-
-
-    /*-------SecondPage-------*/
-
-    header h1.h1-second-page{
-        text-align: center;
-    }
-
-    section.graphic div{
-        display: flex;
-        justify-content: end;
-    }
-
-  }
+}
