--- a/PhoneVersion/styles/style.css
+++ b/PhoneVersion/styles/style.css
@@ -1,10 +1,10 @@
-@media (max-width: 428px) {
-    body {
+@media (max-width: 428px){
+    body{
         background: #000040;
         font-family: 'Rubik';
         padding: 15px;
         color:#FFFFFF;
-        height: 800px; /* here come back */
+        height: 800px;
     }
 
     h1{
@@ -34,54 +34,44 @@
     }
 
     section{
-        position: relative;
-        padding-top:15px ;
-    }
-
-    section#card div{
-        border: 1px solid rgb(85, 31, 83);
-        border-radius: 40px;
+        box-sizing: border-box;
         position: relative;
         width: 100%;
-        height: 215px;
-        
+        height: 215px; 
+        margin-top: 20px;
+        padding: 40px 30px 30px 30px;
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid rgb(85, 31, 83);
+        border-radius: 40px;
         background-color:#000040;
         background-image:  linear-gradient(40deg , rgb(120, 28, 255) -20%, transparent 40%), linear-gradient(320deg , rgb(212, 30, 127) 0%, transparent 60%);;
-        z-index: -1;
+        z-index: -1; 
     }
 
-    section#card div h1{
-        position: absolute;
-        left: 30px;
-        top: 40px;
+    section#card .card-data{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
-    section#card div p{
-        position: absolute;
-        left: 30px;
-        bottom: 52px;
+    section#card .card-vector{
+        display: flex;
+        align-items: center;
+    }
+
+    section#card p{
         color: white;
     }
-    section#card div p.date{
-        position: absolute;
+    section#card p.date{
         font-size: 12px;
-        left: 30px;
-        bottom: 30px;
-        color: rgba(255, 255, 255, 0.7);
+        color: #B9B2C4;
     }
 
-    section#card div img.vector{
+    section#card img.mastercard{
         position: absolute;
-        top: 80px;
-        right: 37px;
-        width: 23px;
-        height: 40px;
-    }
-
-    section#card div img.mastercard{
-        position: absolute;
-        bottom: 26px;
-        right: 34px;
+        bottom: 20px;
+        right: 30px;
         width: 42px;
         height: 40px;
     }
@@ -159,41 +149,5 @@
 
     table tbody td{
         padding: 1px;
-    }
-
-    nav{
-        position: fixed;
-        width: 87%; 
-        height: 60px;
-        bottom: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;     
-        background: linear-gradient(180deg, #20204D 0%, #1D1D55 100%);
-        border: 1px solid #383467;
-        border-radius: 40px;
-    }
-
-    .nav-link{
-        width: 20%;
-        text-align: center;
-    }
-
-    .nav-link:first-child {
-        margin-left: 15px; 
-      }
-
-    .nav-link:last-child {
-        margin-right: 15px; 
-    }
-
-    .nav-link:nth-child(3){  
-        background-image: radial-gradient(at 96% 2%, rgb(250, 0, 255) -40%, transparent 90%), radial-gradient(at 1% 2%, rgb(0, 255, 56) -20%, transparent 90%), radial-gradient(at 1% 94%, rgb(66, 0, 255) -40%, transparent 90%), radial-gradient(at 96% 95%, rgb(0, 240, 255) -20%, transparent 90%);
-        border: 1.5px solid rgb(132, 154, 149);
-        height: 58px;
-        border-radius: 100px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
     }
 }
