--- a/ResponsiveHTML&CSS/styles/header.css
+++ b/ResponsiveHTML&CSS/styles/header.css
@@ -16,8 +16,10 @@
 
 header{
     position: fixed;
+    top: 0;
+    z-index: 1;
     width: 100%;
-    padding: 20px 15%;
+    padding: 10px 10%;
     background-color: white;
     display: flex;
     justify-content: space-between;
@@ -82,12 +84,12 @@ header .btn-shop, .btn-acc{
     border-radius: 16px;
     display: grid;
     place-content: center;
+    margin: 5px;
 }
 
 header .btn-shop{
     border: 0;
     background-color: var(--primary-light);
-    margin: 0 12px 0 5px;
     width: 48px;
     height: 48px;
 }
@@ -115,6 +117,16 @@ header .btn-acc{
 
 header .btn-acc img{
     border-radius: 14px;
+    width: 44px;
+    height: 44px;
+}
+
+header .menu-bar{
+    display: none;
+    border-radius: 16px;
+    place-content: center;
+    background-color: var(--neutral-gray-lightnes);
+    color: var(--neutral-gray);
     width: 44px;
     height: 44px;
 }
