--- a/ResponsiveHTML&CSS/styles/styles.css
+++ b/ResponsiveHTML&CSS/styles/styles.css
@@ -114,9 +114,154 @@ section#view{
 #view .box.first{
     width: 39%;
     max-width: 313px;
-    height: 436px;
-    margin: 6% 3% 0% 12% ;
-    
+    margin: 6% 3% 0% 12%;
+    padding: 12px;
+}
+
+#view .box.first h1,
+h2,
+h3,
+p{
+    margin: 0;
+}
+
+.box.first .rating{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid var(--neutral-gray-lightnes);
+    padding: 0 0 16px 0;
+}
+
+.rating h3{
+    color: var(--neutral-black);
+    font-size: 12px;
+}
+
+.rating h1{
+    color: var(--primary-default);
+    font-size: 18px;
+    margin-top: 5px;
+}
+
+.box.first p.mini-text-gray{
+    font-size: 10px;
+    color: var(--neutral-gray);
+    font-weight: bold;
+}
+
+.rating article{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 9px;
+}
+
+span{
+    color: var(--gray-light);
+    font-size: 12px;
+}
+
+span .checked{
+    color: var(--primary-default);
+}
+
+.rating a{
+    padding: 12px;
+    border-radius: 8px;
+    border: 1px solid var(--primary-default);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box.first .sort{
+    display: flex;
+    justify-content: center;
+}
+
+.sort a{
+    margin: 11px 0 18px 0;
+    padding: 8px 12px;
+    border: 1px solid var(--gray-light);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    gap: 7px;
+}
+
+.sort a .text-dark{
+    color: black;
+    font-size: 13px;
+}
+
+.box.first .sort .mini-text-gray{
+    font-size: 13px;
+    font-weight: normal;
+}
+
+.sort div{
+    width: 8px;
+    height: 8px;
+    border-top: 2px solid gray;
+    border-left: 2px solid gray;
+    rotate: -135deg;color: white;
+    margin: 3px 0 0 4px;
+}
+
+.user-rating{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 10px;
+    padding-bottom: 16px;
+    margin-bottom: 14px;
+    border-bottom: 1px solid var(--neutral-gray-lightnes);
+}
+
+.user-rating .content{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.content article:first-of-type{
+    display: flex;
+    flex-direction: column;
+}
+
+.content article:first-of-type div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 7px;
+}
+
+.content h2{
+    color: var(--neutral-black);
+    font-size: 13px;
+    margin: 0;
+}
+
+.content p{
+    color: var(--neutral-black, #2B2B43);
+    font-size: 13px;
+}
+
+.content article:last-of-type{
+    display: flex;
+    gap: 18px;
+}
+
+.content article:last-of-type div{
+    display: flex;
+    flex-direction: row;
+    gap: 7px;
+}
+
+.content article:last-of-type i{
+    font-size: 15px;
 }
 
 #view .box.second{
@@ -167,7 +312,7 @@ section#view{
     background-color: var(--primary-light);
     border-radius: 10px;
     display: grid;
-    align-items: center;
+    justify-content: center;
     font-size: 20px;
     text-align: center;
     color: var(--primary-default); 
@@ -177,24 +322,67 @@ section#view{
 #view .box.third{
     width: 77%;
     max-width: 650px;
-    height: 135px;
+    max-height: 132px;
     margin: -10% 0 0 8%;
     box-shadow: 0px 0px 80px 0px rgba(49, 57, 120, 0.40);
     display: flex;
     flex-direction: row;
     gap: 17px;
+    padding: 0 12px;
 }
 
 #view img.nigiri-set{
-    border-radius: 9px;
+    border-radius: 20px;
+    padding: 12px 0;
     width: auto;
-    height: 100%;
+    height: auto;
+}
+
+#view .box.third article:first-of-type{
+    padding-top: 8px;
+}
+
+#view .box.third article:last-of-type{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 12px;
+    padding: 0 0 12px 0;
+}
+
+.box.third article:last-of-type div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+.box.third article:last-of-type h3{
+    font-size: 14px;
+}
+
+#view .box.third .btn-add.minus{
+    font-size: 15px;
+    color: var(--gray-light);
+    padding: 0 5px;
+}
+
+#view .box.third .btn-add.plus{
+    font-size: 15px;
+    color: black;
+    padding: 0 5px;
 }
 
 #view .btn-add.cart{
-    font-size: 14px;
-    padding: 10px 14px;
+    width: 112px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    font-size: 13px;
+    padding: 11px 14px;
 }
+
 
 #view footer{
     display: flex;
@@ -204,18 +392,17 @@ section#view{
     margin: 2% 20% 10% 20%;
 }
 
-#view footer h1, p{
-    color: white;
-    margin: 5px 0;
-}
-
 #view footer h1{
     font-size: 32px;
+    color: white;
+    margin: 5px 0;
 }
 
 #view footer p{
     font-size: 14px;
     text-align: center;
+    color: white;
+    margin: 5px 0;
 }
 
 #view footer article{
